@@ -11,6 +11,8 @@ OpenDNSSEC 1.3.17rc1
 
 
 Bugfixes:
+* SUPPORT-116: ods-ksmutil key import. Date validation fails on certain 
+  dates [OPENDNSSEC-589].
 * OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
 * OPENDNSSEC-482: libhsm: Improved cleanup for C_FindObjects.
 * OPENDNSSEC-515: Signer Engine: Don't replace tabs in RRs with whitespace.
